test/deployment-chatbot-be.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chatbot-be
  namespace: test
spec:
  revisionHistoryLimit: 0
  replicas: 1
  selector:
    matchLabels:
      app: chatbot-be
  template:
    metadata:
      labels:
        app: chatbot-be
        vers: "1"
    spec:
      containers:
      - name: chatbot-be
        image: 026090511617.dkr.ecr.us-east-2.amazonaws.com/mindlab-test:chatbot-api-latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3001
        env:
        - name: REDIS_HOST
          value: "1.redis.dev.mind-lab.ai"
        - name: REDIS_PORT
          value: "6379"
        - name: REDIS_PASSWORD
          value: "merliteam2024"
      imagePullSecrets:
      - name: ecr-secret
