test/deployment_redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: test
spec:
  revisionHistoryLimit: 0
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis:7-alpine
        ports:
        - containerPort: 6379
        env:
        - name: REDIS_PASSWORD
          value: merliteam2024
        command: [ "redis-server", "--requirepass", "merliteam2024" ]
