test/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: chatbot-be-svc
  namespace: test
spec:
  selector:
    app: chatbot-be
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3001
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: chatbot-fe-svc
  namespace: test
spec:
  selector:
    app: chatbot-fe
  ports:
    - protocol: TCP
      port: 80 
      targetPort: 80
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: landing-fe-svc
  namespace: test
spec:
  selector:
    app: landing-fe
  ports:
    - protocol: TCP
      port: 80 
      targetPort: 3000
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: landing-be-svc
  namespace: test
spec:
  selector:
    app: landing-be
  ports:
    - protocol: TCP
      port: 80 
      targetPort: 1337
  type: ClusterIP
